--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,23 @@ twitter:
   username: "leather_sole"
 search: true
 
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /categories/
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
+
 # Outputting
 permalink: /:categories/:title/
 # paginate: 5
