--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter:
   username: "leather_sole"
 search: true
+breadcrumbs: true
 
 category_archive:
   type: liquid
