--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ category_archive:
   path: /categories/
 tag_archive:
   type: liquid
-  path: /categories/
+  path: /tags/
 jekyll-archives:
   enabled:
     - categories
