--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ name: "Takayuki Konishi"
 email: seannos.takayuki+pages@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Notes about software and hardware
-baseurl: "/barrel" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #repository: "http://192.168.17.5:18080/jekylltest"
 twitter:
