--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,8 @@ require: asciidoctor-html5s
 asciidoc: {}
 asciidoctor:
   backend: html5s
+  attributes:
+    imagesdir: /assets/images
 
 # Theme
 #theme: minima
