--- a/_config_gitlab.yml
+++ b/_config_gitlab.yml
@@ -1,1 +1,4 @@
 baseurl                  : "/barrel" # the subpath of your site, e.g. "/blog"
+asciidoctor:
+  attributes:
+    imagesdir: /barrel/assets/images
